# psc-prefetch

./: CHANGELOG.md  LICENSE  README.md  psc-prefetch.cabal
app/: Main.hs
src/PscPrefetch/: Prefetch.hs
src/PscPrefetch/Data/: Date.hs  Dependencies.hs  Dependency.hs  FetchSubmodules.hs  NixPrefetchGit.hs  PackageName.hs  PscPackage.hs  PscPackageWithSha256.hs  Repo.hs  Rev.hs  Sha256.hs  Url.hs  Version.hs
test/: Main.hs
