cabal-version:         2.4

name:                  psc-prefetch
version:               0.1.0.0
license:               BSD-3-Clause
license-file:          LICENSE
author:                Ferdy Beekmans
maintainer:            ferdy.beekmans@habito.com
-- copyright:
-- category:
extra-source-files:    CHANGELOG.md

library
  exposed-modules:     PscPrefetch.Data.Date
                     , PscPrefetch.Data.Dependencies
                     , PscPrefetch.Data.Dependency
                     , PscPrefetch.Data.FetchSubmodules
                     , PscPrefetch.Data.NixPrefetchGit
                     , PscPrefetch.Data.PackageName
                     , PscPrefetch.Data.PscPackage
                     , PscPrefetch.Data.PscPackageWithSha256
                     , PscPrefetch.Data.Repo
                     , PscPrefetch.Data.Rev
                     , PscPrefetch.Data.Sha256
                     , PscPrefetch.Data.Url
                     , PscPrefetch.Data.Version
                     , PscPrefetch.Prefetch
  build-depends:       base                 ^>= 4.12.0.0
                     , aeson                ^>= 1.4.2.0
                     , bytestring           ^>= 0.10.8.2
                     , containers           ^>= 0.6.0.1
                     , either               ^>= 5.0.1
                     , process              ^>= 1.6.3.0
                     , QuickCheck           ^>= 2.13.1
  hs-source-dirs:      src
  default-language:    Haskell2010

executable psc-prefetch-app
  main-is:             Main.hs
  build-depends:       base                 ^>= 4.12.0.0
                     , aeson                ^>= 1.4.2.0
                     , aeson-pretty         ^>= 0.8.7
                     , bytestring           ^>= 0.10.8.2
                     , containers           ^>= 0.6.0.1
                     , either               ^>= 5.0.1
                     , process              ^>= 1.6.3.0
                     , psc-prefetch         ^>= 0.1.0.0
  hs-source-dirs:      app
  default-language:    Haskell2010

Test-Suite psc-prefetch-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       aeson                ^>= 1.4.2.0
                     , base
                     , bytestring           ^>= 0.10.8.2
                     , containers           ^>= 0.6.0.1
                     , hspec                ^>= 2.7.1
                     , psc-prefetch         ^>= 0.1.0.0
                     , QuickCheck           ^>= 2.13.1
  default-language:    Haskell2010